force-app/src/objects/TR1__Job_Board__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Job_Board_Code__c</fullName>
        <label>Job Board Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TR1__Job_Board__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>LIB</fullName>
                </value>
                <value>
                    <fullName>MNX</fullName>
                </value>
                <value>
                    <fullName>CAB</fullName>
                </value>
                <value>
                    <fullName>LIR</fullName>
                </value>
                <value>
                    <fullName>DCE</fullName>
                </value>
                <value>
                    <fullName>LRC</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>EFC</fullName>
                </value>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>PZA</fullName>
                </value>
                <value>
                    <fullName>CJN</fullName>
                </value>
                <value>
                    <fullName>CVX</fullName>
                </value>
                <value>
                    <fullName>CWJ</fullName>
                </value>
                <value>
                    <fullName>ITJ</fullName>
                </value>
                <value>
                    <fullName>JBX</fullName>
                </value>
                <value>
                    <fullName>TJS</fullName>
                </value>
                <value>
                    <fullName>HEC</fullName>
                </value>
                <value>
                    <fullName>ZPI</fullName>
                </value>
                <value>
                    <fullName>REX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Job Board External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Job_Board__c</fullName>
        <label>Job Board</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn Basic</fullName>
                </value>
                <value>
                    <fullName>BioSpace</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>CareerBuilder</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Recruiter</fullName>
                </value>
                <value>
                    <fullName>Dice</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Recruiter New</fullName>
                </value>
                <value>
                    <fullName>eFinancial Careers</fullName>
                </value>
                <value>
                    <fullName>Executive Placements</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>PNet</fullName>
                </value>
                <value>
                    <fullName>CareerJunction</fullName>
                </value>
                <value>
                    <fullName>CVLibrary</fullName>
                </value>
                <value>
                    <fullName>CWJobs</fullName>
                </value>
                <value>
                    <fullName>TheITJobboard</fullName>
                </value>
                <value>
                    <fullName>Jobsite</fullName>
                </value>
                <value>
                    <fullName>TotalJobs</fullName>
                </value>
                <value>
                    <fullName>Reed</fullName>
                </value>
                <value>
                    <fullName>HealthEcareer</fullName>
                </value>
                <value>
                    <fullName>ZhaoPin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Optional_Code__c</fullName>
        <label>Optional Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Password2__c</fullName>
        <inlineHelpText>Fallback field incase password is too long to store. Do not place this field on layout.</inlineHelpText>
        <label>PasswordFallback</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TR1__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TR1__Username__c</fullName>
        <label>User Name</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__isGlobal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global?</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Board</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TR1__Job_Board_Code__c</columns>
        <columns>TR1__Job_Board__c</columns>
        <columns>TR1__Job_Board_External_Id__c</columns>
        <columns>TR1__Username__c</columns>
        <columns>TR1__Password__c</columns>
        <columns>TR1__isGlobal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JB-{0000}</displayFormat>
        <label>Job Board</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Boards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>